2007-06-28  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/glade/debug-dialog.glade:
	Change the message label wording.

	* gaupol/gtk/dialogs/debug.py (_resize):
	Set the message label size request to wrap the text nicer.

2007-06-28  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/page.py:
	When the project emits a *-changed signal, move the focus row only if
	it currently is outside the changed rows.

2007-06-28  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/view.py (_init_columns):
	Do not set text columns to expand since it is too slow.

2007-06-28  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/view.py (_get_header_label, _get_renderer):
	Use gtk.CellRendererText instead of gtk.CellRendererSpin for frame
	cells.

2007-06-28  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/agents/edit.py:
	* gaupol/gtk/view.py:
	Accept negative values in the frame cell renderer.

2007-06-28  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/page.py:
	Move focus, at least the row, when projects emits a *-changed,
	subtitles-inserted or subtitles-removed signal.

2007-06-28  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/agents/view.py:
	Do not register setting framerate with the undo/redo system.

2007-06-28  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/main.py (_parse_args):
	Add brackets around NUM in the usage string.

2007-06-28  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/view.py (_on_key_press_event):
	Disable Ctrl+PageUp/PageDown to allow them to be used solely for
	navigation between notebook tabs.

2007-06-28  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/files/mpsub.py (_clean_lines):
	Remove newlines from the beginning of lines to stop them from being
	prepended to the header.

2007-06-28  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/glade/header-dialog.glade:
	Do not wrap text in text views.

2007-06-27  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/dialogs/file/save.py (set_format, set_newline):